--- a/src/index.css
+++ b/src/index.css
@@ -26,8 +26,7 @@ a:hover {
 body {
   margin: 0;
   min-width: 320px;
-  height: 100vh;
-  overflow: hidden;
+  min-height: 100dvh;
   background: linear-gradient(180deg, #58e7f7 0%, #fefffb 100%);
 }
 
